# pulmonary

./: .gitignore  README.md  RUNBOOK.md  compare_checkpoints.py  evaluate.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: debug.yaml  fast.yaml  rtdetr.yaml  thesis.yaml
notebooks/: kaggle_launcher.ipynb
src/: __init__.py  pipeline.py
src/calibration/: recalibration.py  reliability.py  temperature_scaling.py
src/config/: __init__.py  loader.py  schema.py
src/data/: cache.py  dicom.py  discover.py  preprocessing.py  split.py
src/evaluation/: comparison.py  external_validation.py  metrics.py  plots.py
src/explainability/: eigencam.py  evaluation.py  gradcam.py  scorecam.py
src/models/: detector.py  export.py  predict.py  train.py
src/robustness/: benchmark.py  corruption.py
src/uncertainty/: ensemble.py  referral.py
src/utils/: figures.py  gpu.py  logger.py  paths.py  seed.py
tests/: test_box_clipping.py  test_calibration.py  test_checkpoint_resume.py  test_comparison_harness.py  test_config_schema.py  test_dicom_cache.py  test_discover.py  test_export.py  test_gt_boxes.py  test_metrics.py  test_patient_split.py  test_pipeline_stages.py  test_preprocessing.py  test_recalibration.py  test_referral.py  test_robustness_xai_external.py  test_smoke_synthetic.py  test_split_leakage.py
